--- a/cea/default.config
+++ b/cea/default.config
@@ -1894,7 +1894,7 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 x-to-plot = building
 x-to-plot.type = ChoiceParameter
-x-to-plot.choices = building, building_faceted_by_decades, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_annually, district_and_annually_faceted_by_decades
+x-to-plot.choices = building, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_annually
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-operational-emissions]
