--- a/cea/default.config
+++ b/cea/default.config
@@ -1811,7 +1811,7 @@ filter-buildings-by-construction-type.category = Filter by building construction
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
+filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filters by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
 filter-buildings-by-use-type.locator = get_database_archetypes_use_type
 filter-buildings-by-use-type.column = use_type
 filter-buildings-by-use-type.category = Filter by building construction time, type and use type
