--- a/cea/default.config
+++ b/cea/default.config
@@ -1888,6 +1888,27 @@ x-to-plot.type = ChoiceParameter
 x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
+[plots-emission-timeline]
+y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
+y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
+
+y-metric-unit = kgCO2e
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+x-to-plot = district_and_annually
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = district_and_annually
+x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-solar]
 y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
