working with three types

--- a/cea/default.config
+++ b/cea/default.config
@@ -1784,12 +1784,12 @@ context.type = PlotContextParameter
 context.help = Dict that describes the context for the plot, e.g. hour_start, hour_end
 context.nullable = True
 
+[plots-building-filter]
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
 buildings.category = Filter by building construction time, type and use type
 
-[plots-building-filter]
 filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
 filter-buildings-by-year-start.nullable = true
@@ -1889,6 +1889,11 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-emission-timeline]
+plot-type = shaded_stack_percentage
+plot-type.type = ChoiceParameter
+plot-type.choices = line, shaded_stack, shaded_stack_percentage
+plot-type.help = Select the type of plot.
+
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
@@ -1904,11 +1909,6 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
-
-x-to-plot = district_and_annually
-x-to-plot.type = ChoiceParameter
-x-to-plot.choices = district_and_annually
-x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-solar]
 y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
