--- a/cea/default.config
+++ b/cea/default.config
@@ -1889,9 +1889,9 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-emission-timeline]
-plot-type = shaded_stack_percentage
+plot-type = line_net,
 plot-type.type = ChoiceParameter
-plot-type.choices = line, shaded_stack, shaded_stack_percentage
+plot-type.choices = line_cumulative, line_net, shaded_stack, shaded_stack_percentage
 plot-type.help = Select the type of plot.
 
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
