changing the naming

--- a/cea/default.config
+++ b/cea/default.config
@@ -1889,15 +1889,16 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-emission-timeline]
-plot-type = line_net,
+plot-type = shaded_stack_percentage_cumulative
 plot-type.type = ChoiceParameter
-plot-type.choices = line_cumulative, line_net, shaded_stack, shaded_stack_percentage
+plot-type.choices = line_cumulative, line_net_cumulative, shaded_stack_cumulative, shaded_stack_percentage_cumulative
 plot-type.help = Select the type of plot.
 
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
+y-metric-to-plot.category = Y-axis settings
 
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
@@ -1909,6 +1910,12 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+y-normalised-by.category = Y-axis settings
+
+net-zero-target-year = 2060
+net-zero-target-year.type = IntegerParameter
+net-zero-target-year.help = Year by which the net-zero target should be achieved. Used to plot a vertical line in the timeline when plot-type = line_net_cumulative.
+net-zero-target-year.category = X-axis settings
 
 [plots-solar]
 y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
@@ -1926,6 +1933,7 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, solar_technology_area_installed_for_respective_surface
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
 
 x-to-plot = building
 x-to-plot.type = ChoiceParameter
