--- a/cea/default.config
+++ b/cea/default.config
@@ -1889,7 +1889,7 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-emission-timeline]
-plot-type = shaded_stack_percentage_cumulative
+plot-type = line_net_cumulative
 plot-type.type = ChoiceParameter
 plot-type.choices = line_cumulative, line_net_cumulative, shaded_stack_cumulative, shaded_stack_percentage_cumulative
 plot-type.help = Select the type of plot.
