Update plot context help text in default.config
Replaces 'hour_start, hour_end' with 'period_start, period_end' in the context help text for plot configuration parameters to improve clarity and consistency.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1781,7 +1781,7 @@ x-label.category = X-axis settings
 
 context =
 context.type = PlotContextParameter
-context.help = Dict that describes the context for the plot, e.g. hour_start, hour_end
+context.help = Dict that describes the context for the plot, e.g. period_start, period_end
 context.nullable = True
 
 [plots-building-filter]
