Add 'context' parameter to emission-timeline plot

--- a/cea/default.config
+++ b/cea/default.config
@@ -1917,6 +1917,11 @@ net-zero-target-year.type = IntegerParameter
 net-zero-target-year.help = Year by which the net-zero target should be achieved. Used to plot a vertical line in the timeline when plot-type = line_net_cumulative.
 net-zero-target-year.category = X-axis settings
 
+context =
+context.type = PlotContextParameter
+context.help = Dict that describes the context for the plot, e.g. period_start, period_end
+context.nullable = True
+
 [plots-solar]
 y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
 y-metric-to-plot.type = MultiChoiceParameter
