--- a/cea/default.config
+++ b/cea/default.config
@@ -1892,7 +1892,7 @@ x-to-plot.help = Select the column to plot on the X-axis.
 plot-type = shaded_stack_cumulative
 plot-type.type = ChoiceParameter
 plot-type.choices = line_cumulative, line_net_cumulative, shaded_stack_cumulative, shaded_stack_percentage_cumulative
-plot-type.help = Select the type of plot.
+plot-type.help = Select the type of plot. For plot_type = line_net_cumulative, Net emissions = Operatio + Production + Demolition – Biogenic – PV. This net emissions estimate includes operational emissions, embodied emissions from production and demolition, and offsets from on-site PV generation and biogenic carbon stored in long-life bio-based materials. The PV offset assumes 100% self-consumption of electricity using current grid carbon factors. Biogenic carbon is treated as a temporary offset; no end-of-life release is assumed. No future grid decarbonisation or external offsets are assumed.
 
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.type = MultiChoiceParameter
