Add NSIS installation step to build workflow
Introduces a step to install NSIS using Chocolatey before installing the setup plugin in the GitHub Actions build workflow. This ensures NSIS is available for subsequent packaging steps. It was removed in the windows-2025 GitHub runner

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -106,10 +106,13 @@ jobs:
           yarn electron:release
           mv "out/CEA-4 Desktop Setup ${CEA_VERSION}.exe" $GITHUB_WORKSPACE/setup/gui_setup.exe
 
+      - name: Install NSIS
+        shell: bash
+        run: choco install nsis -y
+
       - name: Install setup plugin
         shell: bash
         run: |
-          mkdir -p "C:\Program Files (x86)\NSIS\Plugins\x86-unicode"
           cd "C:\Program Files (x86)\NSIS\Plugins\x86-unicode"
           curl -o Nsis7z.7z https://nsis.sourceforge.io/mediawiki/images/6/69/Nsis7z_19.00.7z
           7z e Nsis7z.7z Plugins/x86-unicode/nsis7z.dll
