Switch build steps to PowerShell in CI workflow
Changed shell from bash to pwsh for NSIS installation and setup steps in the GitHub Actions workflow. Updated directory creation and variable usage to PowerShell syntax for compatibility.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -107,7 +107,7 @@ jobs:
           mv "out/CEA-4 Desktop Setup ${CEA_VERSION}.exe" $GITHUB_WORKSPACE/setup/gui_setup.exe
 
       - name: Install NSIS
-        shell: bash
+        shell: pwsh
         run: choco install nsis -y
 
       - name: Install setup plugin
@@ -118,10 +118,10 @@ jobs:
           7z e Nsis7z.7z Plugins/x86-unicode/nsis7z.dll
 
       - name: Make setup
-        shell: bash
+        shell: pwsh
         run: |
-          mkdir -p $GITHUB_WORKSPACE/setup/Output
-          makensis -DWHEEL_FILE="${WHEEL_FILE}" $GITHUB_WORKSPACE/setup/cityenergyanalyst.nsi
+          New-Item -ItemType Directory -Force -Path "$env:GITHUB_WORKSPACE\setup\Output"
+          makensis -DWHEEL_FILE="$env:WHEEL_FILE" "$env:GITHUB_WORKSPACE\setup\cityenergyanalyst.nsi"
 
       - name: Upload setup
         uses: actions/upload-artifact@v4
