Switch NSIS installation from choco to winget
Replaces the Chocolatey-based NSIS installation step with a winget command in the GitHub Actions workflow. This may improve reliability or align with updated tooling preferences.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Install NSIS
         shell: pwsh
-        run: choco install nsis -y
+        run: winget install -e --id NSIS.NSIS
 
       - name: Install setup plugin
         shell: bash
