Add NSIS Bin directory to PATH in setup workflow
Appends the NSIS Bin directory to the PATH environment variable in the setup_build GitHub Actions workflow to ensure makensis is available during the build process.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -120,6 +120,7 @@ jobs:
       - name: Make setup
         shell: pwsh
         run: |
+          $env:PATH += ";C:\Program Files (x86)\NSIS\Bin"
           New-Item -ItemType Directory -Force -Path "$env:GITHUB_WORKSPACE\setup\Output"
           makensis -DWHEEL_FILE="$env:WHEEL_FILE" "$env:GITHUB_WORKSPACE\setup\cityenergyanalyst.nsi"
 
