Add agreement flags to NSIS installation step
Updated the NSIS installation command in the GitHub Actions workflow to include --accept-package-agreements and --accept-source-agreements flags, ensuring non-interactive installation.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Install NSIS
         shell: pwsh
-        run: winget install -e --id NSIS.NSIS
+        run: winget install -e --id NSIS.NSIS --accept-package-agreements --accept-source-agreements
 
       - name: Install setup plugin
         shell: bash
