--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -757,7 +757,7 @@ Visualisation:
     description: This Feature plots comfort and discomfort hours for buildings
     interfaces: [cli, dashboard]
     module: cea.visualisation.special.comfort_chart
-    parameters: ['general:scenario', plots-comfort-chart, plots-building-filter]
+    parameters: ['general:scenario', plots-building-filter]
     input-files:
       - [get_total_demand]
       - [get_building_architecture]
