expose GRID decarbonization to dashboard

--- a/cea/default.config
+++ b/cea/default.config
@@ -398,6 +398,37 @@ buildings.type = BuildingsParameter
 buildings.help = List of buildings considered in the emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
+grid-decarbonize-reference-year =
+grid-decarbonize-reference-year.type = IntegerParameter
+grid-decarbonize-reference-year.help = The reference year for grid decarbonization. 
+    Starting from this year, the grid starts to be decarbonized linearly from 1 to target emission factor at target year
+    (or be carbonized if target emission factor > 1). 
+    For example, when the reference year is 2020, the target year is 2022, and the target emission factor is 0.0,
+    the grid emission factor is 1.0 in 2020, 0.5 in 2021, and 0.0 in 2022 and all years after.
+    Leave blank to not consider grid decarbonization.
+grid-decarbonize-reference-year.nullable = True
+grid-decarbonize-reference-year.category = Grid Decarbonization
+
+grid-decarbonize-target-year =
+grid-decarbonize-target-year.type = IntegerParameter
+grid-decarbonize-target-year.help = The target year for grid decarbonization. 
+    At this year, the grid reaches the target emission factor. 
+    Years within (reference year+1, target year-1) (both included) are linearly interpolated.
+    Starting from this year, the grid remains decarbonized at the target emission factor.
+    Leave blank to not consider grid decarbonization.
+grid-decarbonize-target-year.nullable = True
+grid-decarbonize-target-year.category = Grid Decarbonization
+
+grid-decarbonize-target-emission-factor =
+grid-decarbonize-target-emission-factor.type = RealParameter
+grid-decarbonize-target-emission-factor.help = The target emission factor for grid decarbonization. 
+    A factor of 1.0 indicates no grid decarbonization, while a factor of 0.0 indicates a fully decarbonized grid.
+    Please note that a target emission factor greater than 1.0 implies a carbonization of the grid.
+    Negative values will currently result in an error, assuming the grid can never become carbon negative.
+    Leave blank to not consider grid decarbonization.
+grid-decarbonize-target-emission-factor.nullable = True
+grid-decarbonize-target-emission-factor.category = Grid Decarbonization
+
 [extract-reference-case]
 destination = {general:scenario}/../..
 destination.type = PathParameter
@@ -534,7 +565,7 @@ copy-database.help = True to copy the Database of the reference Scenario to the 
 
 copy-terrain = False
 copy-terrain.type = BooleanParameter
-copy-terrain.help = True to copy the terrain file of the reference Scenario to the current Scenario. Use this when sure the new Scenario's all buildings including the surrounding fall on the precinct of the current Scenario.
+copy-terrain.help = True to copy the terrain file of the reference Scenario to the current Scenario. Use this when sure the new Scenarios all buildings including the surrounding fall on the precinct of the current Scenario.
 
 copy-weather = True
 copy-weather.type = BooleanParameter
