Fixing supply systems graphics
Fixed a few small errors in the supply systems graphics script. These errors were primarily introduced with the changes in folder naming introduced with the "retain-run-results" switch.

--- a/cea/plots/optimization_new/images/image_lib.yml
+++ b/cea/plots/optimization_new/images/image_lib.yml
@@ -60,6 +60,15 @@ Components:
     TES1:
       icon: "storage_icon.png"
       color: "purple_lighter"
+    FU1:
+      icon: "furnace_icon.png"
+      color: "orange_light"
+    FU2:
+      icon: "furnace_icon.png"
+      color: "orange"
+    unknown:
+      icon: "unknownComponent_icon.png"
+      color: "grey"
 
 
 Consumers:
