Add grid carbon intensity override functionality

--- a/cea/default.config
+++ b/cea/default.config
@@ -398,6 +398,23 @@ buildings.type = BuildingsParameter
 buildings.help = List of buildings considered in the emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
+grid-carbon-intensity-dataset-csv =
+grid-carbon-intensity-dataset-csv.type = FileParameter
+grid-carbon-intensity-dataset-csv.extensions = csv
+grid-carbon-intensity-dataset-csv.nullable = true
+grid-carbon-intensity-dataset-csv.help = Path to the csv file containing the grid carbon intensity dataset 
+    with a column for carbon_intensity (in kgCO2eq/kWh). 
+    Make sure to doublecheck the unit or unreliable result could be generated!
+    Leave blank to use the default data: CEA Database > Components-feedstocks > GRID.
+grid-carbon-intensity-dataset-csv.category = Customize Hourly Grid Emission Data
+
+csv-carbon-intensity-column-name =
+csv-carbon-intensity-column-name.type = StringParameter
+csv-carbon-intensity-column-name.nullable = true
+csv-carbon-intensity-column-name.help = Name of the column in the csv file that contains the carbon intensity data (in kgCO2eq/kWh).
+    if grid-carbon-intensity-dataset-csv is not blank but this is blank, an error will be triggered.
+csv-carbon-intensity-column-name.category = Customize Hourly Grid Emission Data
+
 grid-decarbonize-reference-year =
 grid-decarbonize-reference-year.type = IntegerParameter
 grid-decarbonize-reference-year.help = The reference year for grid decarbonization. 
