--- a/cea/default.config
+++ b/cea/default.config
@@ -390,61 +390,57 @@ operational.help = Estimate Operational costs (variable and fixed) due to supply
 year-end =
 year-end.type = IntegerParameter
 year-end.nullable = True
-year-end.help = The last year that will be included into the timeline. Leave blank to use default = 2100.
+year-end.help = Final year for emission timeline projection. Leave blank to use default = 2100.
 year-end.category = Emission Timeline Detailed Settings
 
 buildings =
 buildings.type = BuildingsParameter
-buildings.help = List of buildings considered in the emission timeline generation.
+buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = FileParameter
 grid-carbon-intensity-dataset-csv.extensions = csv
 grid-carbon-intensity-dataset-csv.nullable = true
-grid-carbon-intensity-dataset-csv.help = Path to the csv file containing the grid carbon intensity dataset 
-    with a column for carbon_intensity (in kgCO2eq/kWh). 
-    Make sure to doublecheck the unit or unreliable result could be generated!
-    Leave blank to use the default data: CEA Database > Components-feedstocks > GRID.
-grid-carbon-intensity-dataset-csv.category = Customize Hourly Grid Emission Data
+grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in kgCO₂e/kWh.
+    Verify units carefully to ensure reliable results.
+    Leave blank to use default data from CEA Database (Components-feedstocks > GRID).
+grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
 
 csv-carbon-intensity-column-name =
 csv-carbon-intensity-column-name.type = StringParameter
 csv-carbon-intensity-column-name.nullable = true
-csv-carbon-intensity-column-name.help = Name of the column in the csv file that contains the carbon intensity data (in kgCO2eq/kWh).
-    if grid-carbon-intensity-dataset-csv is not blank but this is blank, an error will be triggered.
-csv-carbon-intensity-column-name.category = Customize Hourly Grid Emission Data
+csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in kgCO₂e/kWh.
+    Required if grid-carbon-intensity-dataset-csv is provided.
+csv-carbon-intensity-column-name.category = Customise Hourly Grid Emission Data
 
-grid-decarbonize-reference-year =
-grid-decarbonize-reference-year.type = IntegerParameter
-grid-decarbonize-reference-year.help = The reference year for grid decarbonization. 
-    Starting from this year, the grid starts to be decarbonized linearly from 1 to target emission factor at target year
-    (or be carbonized if target emission factor > 1). 
-    For example, when the reference year is 2020, the target year is 2022, and the target emission factor is 0.0,
-    the grid emission factor is 1.0 in 2020, 0.5 in 2021, and 0.0 in 2022 and all years after.
-    Leave blank to not consider grid decarbonization.
-grid-decarbonize-reference-year.nullable = True
-grid-decarbonize-reference-year.category = Grid Decarbonization
+grid-decarbonise-reference-year =
+grid-decarbonise-reference-year.type = IntegerParameter
+grid-decarbonise-reference-year.help = Starting year for grid decarbonisation.
+    Grid emission factor decreases linearly from 1.0 in the reference year to the target emission factor in the target year.
+    Example: reference year 2024, target year 2060, target factor 0.0 gives emission factors of 1.0 (2024), 0.5 (2042), 0.0 (2060 onwards).
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-reference-year.nullable = True
+grid-decarbonise-reference-year.category = Grid Decarbonisation
 
-grid-decarbonize-target-year =
-grid-decarbonize-target-year.type = IntegerParameter
-grid-decarbonize-target-year.help = The target year for grid decarbonization. 
-    At this year, the grid reaches the target emission factor. 
-    Years within (reference year+1, target year-1) (both included) are linearly interpolated.
-    Starting from this year, the grid remains decarbonized at the target emission factor.
-    Leave blank to not consider grid decarbonization.
-grid-decarbonize-target-year.nullable = True
-grid-decarbonize-target-year.category = Grid Decarbonization
+grid-decarbonise-target-year =
+grid-decarbonise-target-year.type = IntegerParameter
+grid-decarbonise-target-year.help = Year when grid reaches target emission factor.
+    Emission factors are linearly interpolated between reference year and target year.
+    Emission factor remains constant at target level from this year onwards.
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-target-year.nullable = True
+grid-decarbonise-target-year.category = Grid Decarbonisation
 
-grid-decarbonize-target-emission-factor =
-grid-decarbonize-target-emission-factor.type = RealParameter
-grid-decarbonize-target-emission-factor.help = The target emission factor for grid decarbonization. 
-    A factor of 1.0 indicates no grid decarbonization, while a factor of 0.0 indicates a fully decarbonized grid.
-    Please note that a target emission factor greater than 1.0 implies a carbonization of the grid.
-    Negative values will currently result in an error, assuming the grid can never become carbon negative.
-    Leave blank to not consider grid decarbonization.
-grid-decarbonize-target-emission-factor.nullable = True
-grid-decarbonize-target-emission-factor.category = Grid Decarbonization
+grid-decarbonise-target-emission-factor =
+grid-decarbonise-target-emission-factor.type = RealParameter
+grid-decarbonise-target-emission-factor.help = Target emission factor for grid decarbonisation (relative to reference year baseline).
+    1.0 = no change, 0.0 = fully decarbonised grid.
+    Values >1.0 indicate grid carbonisation (increasing emissions).
+    Negative values are not supported (grid cannot be carbon negative).
+    Leave blank to disable grid decarbonisation.
+grid-decarbonise-target-emission-factor.nullable = True
+grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
 
 [extract-reference-case]
 destination = {general:scenario}/../..
