--- a/cea/default.config
+++ b/cea/default.config
@@ -402,7 +402,7 @@ grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = FileParameter
 grid-carbon-intensity-dataset-csv.extensions = csv
 grid-carbon-intensity-dataset-csv.nullable = true
-grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in kgCO₂e/kWh.
+grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in gCO₂e/kWh.
     Verify units carefully to ensure reliable results.
     Leave blank to use default data from CEA Database (Components-feedstocks > GRID).
 grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
@@ -410,7 +410,7 @@ grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
 csv-carbon-intensity-column-name =
 csv-carbon-intensity-column-name.type = StringParameter
 csv-carbon-intensity-column-name.nullable = true
-csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in kgCO₂e/kWh.
+csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in gCO₂e/kWh.
     Required if grid-carbon-intensity-dataset-csv is provided.
 csv-carbon-intensity-column-name.category = Customise Hourly Grid Emission Data
 
