--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -271,6 +271,8 @@ Life Cycle Analysis:
       **Operational emissions** include energy supply system operation for heating, cooling, electricity, and domestic hot water.
 
       Outputs include total annual emissions (kgCO₂e/year), emissions intensity (kgCO₂e/m²/year), optional hourly operational emissions (8,760 hours), and projected annual embodied emissions until a target year.
+
+      **Optional**: For location-specific grid emission data, download hourly carbon intensity datasets from [Electricity Maps](https://portal.electricitymaps.com/datasets). Ensure proper citation and compliance with their terms of use.
     interfaces: [cli, dashboard]
     module: cea.analysis.lca.main
     parameters: ['general:scenario', emissions]
