Update parameter to InputFileParameter

--- a/cea/default.config
+++ b/cea/default.config
@@ -399,7 +399,7 @@ buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
 grid-carbon-intensity-dataset-csv =
-grid-carbon-intensity-dataset-csv.type = FileParameter
+grid-carbon-intensity-dataset-csv.type = InputFileParameter
 grid-carbon-intensity-dataset-csv.extensions = csv
 grid-carbon-intensity-dataset-csv.nullable = true
 grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in gCO₂e/kWh.
